fix FAN-2236 - fix svg sizing on ios; additional css fixes for auth forms on ios

--- a/quiz-app/components/AuthPopup/AuthPopup.scss
+++ b/quiz-app/components/AuthPopup/AuthPopup.scss
@@ -69,14 +69,19 @@ $icon-sz: 55px;
   display: flex;
   justify-content: center;
   align-items: center;
-  .strike.flip {
-    transform: rotate(180deg);
+  .strike {
+    width: 96px;
+    height: 1px;
+    &.flip {
+      transform: rotate(180deg);
+    }
   }
 }
 /*
 Form
 */
 .auth-form {
+  width: 100%;
   margin: 5px 0 10px;
 
   .share-btn {
