--- a/quiz-app/components/AuthPopup/Controls.scss
+++ b/quiz-app/components/AuthPopup/Controls.scss
@@ -21,6 +21,7 @@
     line-height: calc(20/19);
     color: $color-grey-dark;
     border: 0;
+    border-radius: 0;
     border-bottom: 2px solid $brand-color-lite;
 
     &:focus,
